<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_AC"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_backspace"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_percent"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_divide"
                android:layout_margin="2dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_7"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_8"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_9"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_multiply"
                android:layout_margin="2dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_4"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_5"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_6"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_subtract"
                android:layout_margin="2dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_1"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_2"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_3"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_addition"
                android:layout_margin="2dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="4"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_0"
                android:layout_margin="2dp"
                android:layout_weight="2"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_point"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_equals"
                android:layout_margin="2dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>